overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   .wrapper{
     width: 100%;
     margin-top: 5rem;
+    overflow-x: hidden;
   }
   .wrapper .policy{
     width:100%;
